--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat de Dúvidas - Unifametro</title>
+    <title>Chat de Dúvidas</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="/public/Background.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -14,15 +14,15 @@
 <body>
     <div class="chat-container">
         <div class="sidebar">
-            <img src="Background.png" alt="Logo da Faculdade" class="college-logo">
+            <img src="" alt="Logo da Faculdade" class="college-logo">
             <div class="sidebar-text">
-                <p>Seja bem-vindo(a) ao nosso chat de alunos da Unifametro</p>
+                <p>Seja bem-vindo(a) ao nosso chat tira dúvidas</p>
                 <p>Estamos aqui para te ajudar.</p>
             </div>
         </div>
         <div class="chat-main">
             <div class="chat-header">
-                <img src="Background.png" alt="Logo da Faculdade" class="header-logo">
+                <img src="" alt="Logo da Faculdade" class="header-logo">
                 <span>Central de Atendimento</span>
             </div>
             <div class="chat-messages" id="chat-messages">
