alteração das cores do background para verde escuro

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="chat-container">
         <div class="sidebar">
-            <img src="" alt="Logo da Faculdade" class="college-logo">
+            <img src="Background.png" alt="Logo da Faculdade" class="college-logo">
             <div class="sidebar-text">
                 <p>Seja bem-vindo(a) ao nosso chat tira dúvidas</p>
                 <p>Estamos aqui para te ajudar.</p>
@@ -22,7 +22,7 @@
         </div>
         <div class="chat-main">
             <div class="chat-header">
-                <img src="" alt="Logo da Faculdade" class="header-logo">
+                <img src="Background.png" alt="Logo da Faculdade" class="header-logo">
                 <span>Central de Atendimento</span>
             </div>
             <div class="chat-messages" id="chat-messages">
