--- a/public/index.html
+++ b/public/index.html
@@ -9,34 +9,44 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link 
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" 
+      rel="stylesheet">
 </head>
 <body>
     <div class="chat-container">
+        <!-- Lado esquerdo (sidebar) -->
         <div class="sidebar">
             <img src="Background.png" alt="Logo da Faculdade" class="college-logo">
             <div class="sidebar-text">
-                <p>Seja bem-vindo(a) ao nosso chat tira dúvidas</p>
+                <p>Seja bem-vindo(a) ao nosso chat tira-dúvidas.</p>
                 <p>Estamos aqui para te ajudar.</p>
             </div>
         </div>
+
+        <!-- Lado direito (chat) -->
         <div class="chat-main">
             <div class="chat-header">
                 <img src="Background.png" alt="Logo da Faculdade" class="header-logo">
                 <span>Central de Atendimento</span>
             </div>
+            
             <div class="chat-messages" id="chat-messages">
                 <div class="message received">
                     Olá! Seja bem-vindo(a) ao nosso chat de dúvidas. Como posso te ajudar hoje?
                 </div>
             </div>
+            
             <div class="chat-input-area">
+                <!-- Botões FAQ -->
                 <div class="faq-buttons" id="faq-buttons">
                     <button data-question="horarios">Horários de aula</button>
                     <button data-question="matricula">Processo de matrícula</button>
                     <button data-question="financeiro">Dúvidas financeiras</button>
                     <button data-question="suporte">Suporte técnico</button>
                 </div>
+
+                <!-- Campo de texto -->
                 <div class="input-wrapper">
                     <input type="text" id="user-input" placeholder="Digite sua dúvida...">
                     <button id="send-button"><i class="fas fa-paper-plane"></i></button>
@@ -44,6 +54,7 @@
             </div>
         </div>
     </div>
+
     <script src="script.js"></script>
 </body>
 </html>
